--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <base href="/Kigumo-Technical/" />
   <title>Kigumo Technical And Vocational College</title>
   <link rel="shortcut icon" href="FrontEnd/images/fav.png" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -122,8 +121,7 @@
         <img src="FrontEnd/images/school1.jpg" class="d-block w-100" alt="">
         <div class="carousel-overlay">
           <div class="carousel-caption">
-            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span
-                class="tag-highlight">Vocational College</span></p>
+            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span class="tag-highlight">Vocational College</span></p>
             <h1 class="carousel-title">Apply for January 2026 Intake</h1>
             <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.
             </p>
