--- a/FrontEnd/html/contact.html
+++ b/FrontEnd/html/contact.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <base href="/Kigumo-Technical/" />
   <title>Kigumo Technical And Vocational College</title>
-  <link rel="shortcut icon" href="FrontEnd/images/fav.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="../images/fav.png" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-  <link rel="stylesheet" href="FrontEnd/css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
@@ -18,7 +17,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-warning" aria-label="Main navigation">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="FrontEnd/images/official_logo.jpg" alt="Kigumo logo" class="img-fluid" />
+        <img src="../images/official_logo.jpg" alt="Kigumo logo" class="img-fluid" />
         <!-- <span class="college-name">Kigumo Technical And Vocational College</span> -->
       </a>
 
@@ -112,7 +111,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
-  <script type="module" src="FrontEnd/js/main.js"></script>
+  <script type="module" src="../js/main.js"></script>
  
   <!-- Contact Section -->
   <section id="contact" class="contact-section py-5 bg-light">
