--- a/index.html
+++ b/index.html
@@ -100,9 +100,37 @@
           <li class="nav-item"><a class="nav-link" href="#">Courses</a></li>
           <li class="nav-item"><a class="nav-link" href="#">News &amp; Events</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Careers</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">School Portals</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Downloads</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Students</a></li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Portals</a>
+            <ul class="dropdown-menu">
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Students</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Intelimmis</a></li>
+                  <li><a class="dropdown-item" href="#">Timetables</a></li>
+                </ul>
+              </li>
+
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Staffs</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Intellimis Staff Portal</a></li>
+                  <li><a class="dropdown-item" href="#">Student Manangement</a></li>
+                  <li><a class="dropdown-item" href="#">Finance &amp; Administration</a></li>
+                  <li><a class="dropdown-item" href="#">Clubs Manangement</a></li>
+                  <li><a class="dropdown-item" href="#">Marketing &amp; Advertisement</a></li>
+                  <li><a class="dropdown-item" href="#">Exam Transcprits</a></li>
+                </ul>
+              </li>
+            </ul>
+          </li>
           <li class="nav-item"><a class="nav-link" href="FrontEnd/html/contact.html">Contact us</a></li>
         </ul>
 
