--- a/FrontEnd/html/contact.html
+++ b/FrontEnd/html/contact.html
@@ -16,7 +16,7 @@
   <!-- Combined navbar: logo only; yellow background -->
   <nav class="navbar navbar-expand-lg navbar-light bg-warning" aria-label="Main navigation">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="../../index.html">
         <img src="../images/official_logo.jpg" alt="Kigumo logo" class="img-fluid" />
         <!-- <span class="college-name">Kigumo Technical And Vocational College</span> -->
       </a>
@@ -207,7 +207,7 @@
         <!-- About + Subscribe -->
         <div class="col-lg-4">
           <div class="mb-3 d-flex align-items-center gap-2">
-            <img src="FrontEnd/images/official_logo.jpg" alt="Kigumo TVC" class="footer-logo">
+            <img src="FrontEnd\images\official_logo.jpg" alt="Kigumo TVC" class="footer-logo">
             <span class="fw-bold h5 m-0">KIGUMO TVC</span>
           </div>
           <h6 class="text-uppercase fw-bold mb-3">About Us</h6>
