--- a/index.html
+++ b/index.html
@@ -16,131 +16,8 @@
 </head>
 
 <body>
-  <!-- Combined navbar: logo only; yellow background -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-warning" aria-label="Main navigation">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="FrontEnd/images/official_logo.jpg" alt="Kigumo logo" class="img-fluid" />
-        <!-- <span class="college-name">Kigumo Technical And Vocational College</span> -->
-      </a>
-
-      <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavCollapse"
-        aria-controls="mainNavCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="toggler-icon" aria-hidden="true"><span class="bar"></span><span class="bar"></span><span
-            class="bar"></span></span>
-        <span class="visually-hidden">Toggle navigation</span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="mainNavCollapse">
-        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-
-          <!-- About with nested Administration submenu -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">About</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">About Kigumo TVC</a></li>
-              <li><a class="dropdown-item" href="#">Service Charter</a></li>
-              <li><a class="dropdown-item" href="#">QMS</a></li>
-              <li><a class="dropdown-item" href="#">Vision &amp; Mission</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-
-              <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Administration</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Board of Management</a></li>
-                  <li><a class="dropdown-item" href="#">Chief Principal</a></li>
-                  <li><a class="dropdown-item" href="#">Deputy Principal Academics</a></li>
-                  <li><a class="dropdown-item" href="#">Deputy Principal Administration</a></li>
-                  <li><a class="dropdown-item" href="#">Dean of Students</a></li>
-                  <li><a class="dropdown-item" href="#">Head of Departments / HOS</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-
-          <!-- Departments with nested Academic and Non-Academic -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Departments</a>
-            <ul class="dropdown-menu">
-              <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Academic</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">ICT</a></li>
-                  <li><a class="dropdown-item" href="#">Agriculture</a></li>
-                  <li><a class="dropdown-item" href="#">Mechanical</a></li>
-                  <li><a class="dropdown-item" href="#">Building &amp; Construction</a></li>
-                  <li><a class="dropdown-item" href="#">Electrical &amp; Electronics</a></li>
-                  <li><a class="dropdown-item" href="#">Hospitality</a></li>
-                  <li><a class="dropdown-item" href="#">Cosmetology</a></li>
-                  <li><a class="dropdown-item" href="#">Fashion &amp; Design</a></li>
-                </ul>
-              </li>
-
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-
-              <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Non Academic</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Board of Management</a></li>
-                  <li><a class="dropdown-item" href="#">Sports</a></li>
-                  <li><a class="dropdown-item" href="#">Guidance &amp; Counselling</a></li>
-                  <li><a class="dropdown-item" href="#">Science</a></li>
-                  <li><a class="dropdown-item" href="#">Marketing &amp; Advertisement</a></li>
-                  <li><a class="dropdown-item" href="#">Music</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-
-          <li class="nav-item"><a class="nav-link" href="#">Courses</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">News &amp; Events</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Careers</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Downloads</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Students</a></li>
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Portals</a>
-            <ul class="dropdown-menu">
-              <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Students</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Intelimmis</a></li>
-                  <li><a class="dropdown-item" href="#">Timetables</a></li>
-                </ul>
-              </li>
-
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-
-              <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Staffs</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Intellimis Staff Portal</a></li>
-                  <li><a class="dropdown-item" href="#">Student Manangement</a></li>
-                  <li><a class="dropdown-item" href="#">Finance &amp; Administration</a></li>
-                  <li><a class="dropdown-item" href="#">Clubs Manangement</a></li>
-                  <li><a class="dropdown-item" href="#">Marketing &amp; Advertisement</a></li>
-                  <li><a class="dropdown-item" href="#">Exam Transcprits</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="FrontEnd/html/contact.html">Contact us</a></li>
-        </ul>
-
-        <form class="d-flex ms-auto ms-lg-0" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
+  <!-- Navbar Placeholder -->
+  <div id="navbar-placeholder"></div>
 
   <!-- carousel with overlay text -->
   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -207,107 +84,19 @@
     </button>
   </div>
 
+  <!-- Footer Placeholder -->
+  <div id="footer-placeholder"></div>
 
-  <!-- Site Footer -->
-  <footer class="site-footer text-light pt-5 pb-4 mt-5">
-    <div class="container">
-      <div class="row gy-4">
-        <!-- About + Subscribe -->
-        <div class="col-lg-4">
-          <div class="mb-3 d-flex align-items-center gap-2">
-            <img src="FrontEnd/images/official_logo.jpg" alt="Kigumo TVC" class="footer-logo">
-            <span class="fw-bold h5 m-0">KIGUMO TVC</span>
-          </div>
-          <h6 class="text-uppercase fw-bold mb-3">About Us</h6>
-          <p class="mb-4 small footer-about">
-            The College is committed to training technically skilled personnel for employment across sectors of the
-            economy. We offer programs from Artisan to Diploma, equipped with modern facilities and dedicated staff.
-          </p>
-
-          <h6 class="text-uppercase fw-bold mb-2">Subscribe For Updates</h6>
-          <form class="subscribe-form" onsubmit="event.preventDefault();">
-            <div class="input-group">
-              <input type="email" class="form-control form-control-sm" placeholder="Your Email Address"
-                aria-label="Email for updates">
-              <button class="btn btn-warning" type="submit" aria-label="Subscribe">&rarr;</button>
-            </div>
-          </form>
-
-          <div class="social-links mt-3 d-flex gap-3">
-            <a href="#" aria-label="Facebook" class="social-circle bg-fb"><i class="bi bi-facebook"></i></a>
-            <a href="#" aria-label="Twitter" class="social-circle bg-tw"><i class="bi bi-twitter"></i></a>
-            <a href="#" aria-label="YouTube" class="social-circle bg-yt"><i class="bi bi-youtube"></i></a>
-            <a href="#" aria-label="Telegram" class="social-circle bg-tg"><i class="bi bi-telegram"></i></a>
-            <a href="#" aria-label="WhatsApp" class="social-circle bg-wa"><i class="bi bi-whatsapp"></i></a>
-          </div>
-        </div>
-
-        <!-- Quick Links -->
-        <div class="col-6 col-lg-2">
-          <h6 class="text-uppercase fw-bold mb-3">Quick Links</h6>
-          <ul class="list-unstyled footer-links">
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> Home</a></li>
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> About</a></li>
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> Our Programmes</a></li>
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> Latest News</a></li>
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> Job Vacancies</a></li>
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> FAQs</a></li>
-            <li><a href="FrontEnd/html/contact.html"><i class="bi bi-arrow-right-short"></i> Contact</a></li>
-          </ul>
-        </div>
-
-        <!-- Get In Touch -->
-        <div class="col-6 col-lg-3">
-          <h6 class="text-uppercase fw-bold mb-3">Get In Touch</h6>
-          <ul class="list-unstyled footer-contact">
-            <li class="mb-2"><i class="bi bi-geo-alt-fill text-success me-2"></i> P.O. Box 5 - 10203 Kigumo, Kenya</li>
-            <li class="mb-2"><i class="bi bi-telephone-fill text-success me-2"></i> <a href="tel:+254769394273">+254 769
-                394 273</a></li>
-            <li class="mb-2"><i class="bi bi-envelope-fill text-success me-2"></i> <a
-                href="mailto:info@kigumotvc.ac.ke">info@kigumotvc.ac.ke</a></li>
-            <li class="mb-2"><i class="bi bi-whatsapp text-success me-2"></i> <a href="tel:+254769394273">+254 769 394
-                273</a></li>
-          </ul>
-        </div>
-
-        <!-- Other Links -->
-        <div class="col-lg-3">
-          <h6 class="text-uppercase fw-bold mb-3">Other Links</h6>
-          <ul class="list-unstyled footer-links">
-            <li><a href="https://portal.hef.co.ke/auth/signup" target="_blank"><i class="bi bi-arrow-right-short"></i>
-                Apply Help Loan</a></li>
-            <li><a href="https://students.kuccps.net/login/" target="_blank"><i class="bi bi-arrow-right-short"></i>
-                KUCCPS</a></li>
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> Updates</a></li>
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> FAQ</a></li>
-            <li><a href="https://intellimis.com/login" target="_blank""><i class=" bi bi-arrow-right-short"></i> Student
-                Portal</a></li>
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> Staff Portal</a></li>
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> Downloads</a></li>
-          </ul>
-        </div>
-      </div>
-
-      <hr class="border-top border-success border-opacity-50 my-4">
-      <div class="d-flex flex-column flex-md-row justify-content-between align-items-center small text-white-50">
-        <span>&copy; <span id="year"></span> Kigumo Technical And Vocational College. All rights reserved.</span>
-        <!-- <span>Designed with Bootstrap 5</span> -->
-      </div>
-    </div>
-  </footer>
-
-  <script>
-    // Footer year
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
-
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
+  
+  <!-- Component Loader -->
+  <script src="FrontEnd/js/components.js"></script>
+  
+  <!-- Custom JS -->
   <script type="module" src="FrontEnd/js/main.js"></script>
-
-
-
 </body>
 
 </html>
