--- a/FrontEnd/html/contact.html
+++ b/FrontEnd/html/contact.html
@@ -17,15 +17,20 @@
   <!-- Navbar Placeholder -->
   <div id="navbar-placeholder"></div>
 
+  <!-- Hero Section with Background Image -->
+  <section class="hero-section position-relative" style="height: 250px; overflow: hidden;">
+    <img src="../images/school1.jpg" alt="Kigumo TVC Campus" class="w-100 h-100" style="object-fit: cover; filter: brightness(0.5);">
+    <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center" style="background: rgba(0, 0, 0, 0.5);">
+      <div class="text-center text-white">
+        <h1 class="display-2 fw-bold text-uppercase mb-0" style="font-weight: 900 !important; letter-spacing: 2px;">CONTACT US</h1>
+      </div>
+    </div>
+  </section>
+
   <!-- Contact Section -->
   <section id="contact" class="contact-section py-5 bg-light">
     <div class="container">
-      <div class="row mb-4">
-        <div class="col-12 text-center img-section">
-          <h2 class="fw-bold contact-text">Contact Us</h2>
-          <p class="text-muted">Reach out for admissions, courses, or general support.</p>
-        </div>
-      </div>
+      <div class="row g-4">
 
       <div class="row g-4">
         <!-- Contact Form (Left Side) -->
