enhance mobile carousel with vibrant overlays and improved responsiveness

--- a/index.html
+++ b/index.html
@@ -16,73 +16,160 @@
 </head>
 
 <body>
+
   <!-- Navbar Placeholder -->
   <div id="navbar-placeholder"></div>
 
-  <!-- carousel with overlay text -->
-  <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="FrontEnd/images/school1.jpg" class="d-block w-100" alt="">
-        <div class="carousel-overlay">
-          <div class="carousel-caption">
-            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span class="tag-highlight">Vocational College</span></p>
-            <h1 class="carousel-title">Apply for January 2026 Intake</h1>
-            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.
-            </p>
-            <a href="#" class="carousel-btn">Our Programmes →</a>
+  <!-- Hero Carousel with Vibrant Overlay -->
+  <div class="homepage-hero mb-4 pb-2">
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="FrontEnd/images/school1.jpg" class="d-block w-100" alt="Kigumo College">
+          <div class="carousel-overlay">
+            <div class="carousel-caption">
+              <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span
+                  class="tag-highlight">Vocational College</span></p>
+              <h1 class="carousel-title">Empowering Futures, Shaping Careers</h1>
+              <p class="carousel-subtitle">Welcome to Kigumo TVC – Where ambition meets opportunity. Apply for January
+                2026 Intake!</p>
+              <a href="#programmes" class="carousel-btn">Explore Programmes →</a>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="FrontEnd/images/adm1.jpg" class="d-block w-100" alt="Admissions">
+          <div class="carousel-overlay">
+            <div class="carousel-caption">
+              <p class="carousel-tag"><span class="tag-green">Admissions Open For January 2026 Intake</span></p>
+              <h1 class="carousel-title">Join Our Community</h1>
+              <p class="carousel-subtitle">Secure your spot and start your journey with us. Modern facilities, expert
+                staff, and vibrant student life.</p>
+              <a href="#admissions" class="carousel-btn">How to Apply →</a>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="FrontEnd/images/tra1.jpg" class="d-block w-100" alt="Training">
+          <div class="carousel-overlay">
+            <div class="carousel-caption">
+              <p class="carousel-tag"><span class="tag-green">Skilled Training</span></p>
+              <h1 class="carousel-title">Artisan to Diploma</h1>
+              <p class="carousel-subtitle">Explore our wide range of technical courses designed for real-world success.
+              </p>
+              <a href="#programmes" class="carousel-btn">View Courses →</a>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="FrontEnd/images/tree planting 1.jpg" class="d-block w-100" alt="Environment">
+          <div class="carousel-overlay">
+            <div class="carousel-caption">
+              <p class="carousel-tag"><span class="tag-green">Green Campus</span></p>
+              <h1 class="carousel-title">Sustainability & Growth</h1>
+              <p class="carousel-subtitle">We nurture both minds and the environment. Join our eco-friendly initiatives.
+              </p>
+              <a href="#contact" class="carousel-btn">Contact Us →</a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="FrontEnd/images/adm1.jpg" class="d-block w-100" alt="">
-        <div class="carousel-overlay">
-          <div class="carousel-caption">
-            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span
-                class="tag-highlight">Vocational College</span></p>
-            <h1 class="carousel-title">Apply for January 2026 Intake</h1>
-            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.
-            </p>
-            <a href="#" class="carousel-btn">Our Programmes →</a>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+
+  <!-- Welcome & Mission Section -->
+  <section class="container py-5 text-center homepage-highlight">
+    <h2 class="homepage-section-title">Welcome to Kigumo Technical & Vocational College</h2>
+    <p class="homepage-section-subtitle">Empowering students with practical skills for a brighter future.</p>
+    <p class="mb-4">Our mission is to provide quality technical education, foster innovation, and prepare graduates for
+      success in a dynamic world.</p>
+    <a href="#admissions" class="btn btn-success btn-lg mx-2">Apply Now</a>
+    <a href="#programmes" class="btn btn-warning btn-lg mx-2">View Programmes</a>
+  </section>
+
+  <!-- About Kigumo Section (New) -->
+  <section class="container about-kigumo">
+    <div class="row align-items-center">
+      <div class="col-md-6 mb-3 mb-md-0">
+        <img src="FrontEnd/images/school1.jpg" alt="About Kigumo TVC" class="img-fluid rounded shadow">
+      </div>
+      <div class="col-md-6">
+        <h3>About Kigumo TVC</h3>
+        <ul>
+          <li><strong>Founded:</strong> 2023, serving Murang'a and beyond</li>
+          <li><strong>Accreditation:</strong> Registered by TVETA, Ministry of Education</li>
+          <li><strong>Vision:</strong> To be a center of excellence in technical and vocational training</li>
+          <li><strong>Core Values:</strong> Integrity, Innovation, Inclusivity, Environmental Stewardship</li>
+          <li><strong>Facilities:</strong> Modern workshops, ICT labs, Jitume Labs, outside - hostels, High Speed Internet(WI-FI) and sports grounds</li>
+          <li><strong>Community:</strong> Over 2,000+ students and 60+ staff</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <!-- Highlights Section -->
+  <section class="container py-4 homepage-highlight" id="programmes">
+    <h2 class="homepage-section-title">Why Choose Kigumo TVC?</h2>
+    <div class="row text-center">
+      <div class="col-md-4 mb-4">
+        <div class="card h-100 border-0 shadow-sm">
+          <div class="card-body">
+            <i class="bi bi-award display-4" style="color:#28a745;"></i>
+            <h5 class="card-title mt-3">Accredited Courses</h5>
+            <p class="card-text">Artisan, Certificate, and Diploma programs in Engineering, ICT, Business, and more.</p>
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="FrontEnd/images/tra1.jpg" class="d-block w-100" alt="">
-        <div class="carousel-overlay">
-          <div class="carousel-caption">
-            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span
-                class="tag-highlight">Vocational College</span></p>
-            <h1 class="carousel-title">Apply for January 2026 Intake</h1>
-            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.
-            </p>
-            <a href="#" class="carousel-btn">Our Programmes →</a>
+      <div class="col-md-4 mb-4">
+        <div class="card h-100 border-0 shadow-sm">
+          <div class="card-body">
+            <i class="bi bi-people display-4" style="color:#ffc107;"></i>
+            <h5 class="card-title mt-3">Student Life</h5>
+            <p class="card-text">Vibrant campus, clubs, sports, and leadership opportunities for holistic growth.</p>
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="FrontEnd/images/tree planting 1.jpg" class="d-block w-100" alt="">
-        <div class="carousel-overlay">
-          <div class="carousel-caption">
-            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span
-                class="tag-highlight">Vocational College</span></p>
-            <h1 class="carousel-title">Apply for January 2026 Intake</h1>
-            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.
-            </p>
-            <a href="#" class="carousel-btn">Our Programmes →</a>
+      <div class="col-md-4 mb-4">
+        <div class="card h-100 border-0 shadow-sm">
+          <div class="card-body">
+            <i class="bi bi-building display-4" style="color:#28a745;"></i>
+            <h5 class="card-title mt-3">Modern Facilities</h5>
+            <p class="card-text">State-of-the-art workshops, computer labs, and eco-friendly learning spaces.</p>
           </div>
         </div>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-      data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-      data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span>
-    </button>
-  </div>
+  </section>
+
+  <!-- Admissions Section -->
+  <section class="container py-5" id="admissions">
+    <div class="row align-items-center">
+      <div class="col-md-6 mb-4 mb-md-0">
+        <img src="FrontEnd/images/adm1.jpg" alt="Admissions" class="img-fluid rounded shadow">
+      </div>
+      <div class="col-md-6">
+        <h3 class="fw-bold" style="color:#28a745;">Admissions & How to Apply</h3>
+        <p>Ready to join Kigumo TVC? Download our application form or visit our campus for guidance. We welcome students
+          from all backgrounds.</p>
+        <a href="#contact" class="btn btn-warning btn-lg">Contact Admissions</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section class="container py-5 text-center" id="contact">
+    <h3 class="fw-bold" style="color:#ffc107;">Get In Touch</h3>
+    <p>Have questions? Reach out to us for more information about our programmes, admissions, or campus life.</p>
+    <a href="FrontEnd/html/contact.html" class="btn btn-success btn-lg">Contact Us</a>
+  </section>
 
   <!-- Footer Placeholder -->
   <div id="footer-placeholder"></div>
@@ -91,10 +178,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
-  
   <!-- Component Loader -->
   <script src="FrontEnd/js/components.js"></script>
-  
   <!-- Custom JS -->
   <script type="module" src="FrontEnd/js/main.js"></script>
 </body>
