--- a/index.html
+++ b/index.html
@@ -80,13 +80,15 @@
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
         data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span>
+        <span class="carousel-control-next-icon next" aria-hidden="true"></span><span class="visually-hidden ">Next</span>
       </button>
     </div>
   </div>
 
-  <!-- Welcome & Mission Section -->
-  <section class="container py-5 text-center homepage-highlight">
+    
+
+    <!-- Welcome & Mission Section -->
+    <section class="container py-5 text-center homepage-highlight">
     <h2 class="homepage-section-title">Welcome to Kigumo Technical & Vocational College</h2>
     <p class="homepage-section-subtitle">Empowering students with practical skills for a brighter future.</p>
     <p class="mb-4">Our mission is to provide quality technical education, foster innovation, and prepare graduates for
@@ -150,13 +152,13 @@
   </section>
 
   <!-- Admissions Section -->
-  <section class="container py-5" id="admissions">
+  <section class="container admissions-section" id="admissions">
     <div class="row align-items-center">
       <div class="col-md-6 mb-4 mb-md-0">
         <img src="FrontEnd/images/adm1.jpg" alt="Admissions" class="img-fluid rounded shadow">
       </div>
       <div class="col-md-6">
-        <h3 class="fw-bold" style="color:#28a745;">Admissions & How to Apply</h3>
+        <h3 class="fw-bold">Admissions & How to Apply</h3>
         <p>Ready to join Kigumo TVC? Download our application form or visit our campus for guidance. We welcome students
           from all backgrounds.</p>
         <a href="#contact" class="btn btn-warning btn-lg">Contact Admissions</a>
@@ -165,8 +167,8 @@
   </section>
 
   <!-- Contact Section -->
-  <section class="container py-5 text-center" id="contact">
-    <h3 class="fw-bold" style="color:#ffc107;">Get In Touch</h3>
+  <section class="container contact-section-home text-center" id="contact">
+    <h3 class="fw-bold">Get In Touch</h3>
     <p>Have questions? Reach out to us for more information about our programmes, admissions, or campus life.</p>
     <a href="FrontEnd/html/contact.html" class="btn btn-success btn-lg">Contact Us</a>
   </section>
