--- a/FrontEnd/html/departments.html
+++ b/FrontEnd/html/departments.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About -Kigumo Technical And Vocational College</title>
+    <title>Departments - Kigumo Technical And Vocationa College</title>
     <link rel="shortcut icon" href="../images/fav.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
@@ -14,18 +14,19 @@
 </head>
 
 <body>
+
     <!-- Navbar Placeholder -->
     <div id="navbar-placeholder"></div>
 
-     <!-- Hero Section with Background Image -->
+    <!-- Hero Section with Background Image -->
     <section class="hero-section position-relative" style="height: 250px; overflow: hidden;">
-        <img src="../images/tra1.jpg" alt="Kigumo TVC Campus" class="w-100 h-100"
+        <img src="../images/dep/ict.jpg" alt="Kigumo TVC Campus" class="w-100 h-100"
             style="object-fit: cover; filter: brightness(0.5);">
         <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center"
             style="background: rgba(0, 0, 0, 0.5);">
             <div class="text-center text-white accordion-collapse">
                 <h1 class="display-2 fw-bold text-uppercase mb-0"
-                    style="font-weight: 900 ; letter-spacing: 2px;">  OUR ABOUTS</h1>
+                    style="font-weight: 900 ; letter-spacing: 2px;"> OUR DEPARTMENTS</h1>
             </div>
         </div>
     </section>
