--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Kigumo Technical And Vocational College</title>
+  <title>Kigumo Technical And Vocational College - "Excel in your Profession"</title>
   <link rel="shortcut icon" href="FrontEnd/images/fav.png" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
@@ -13,6 +13,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
   <link rel="stylesheet" href="FrontEnd/css/styles.css">
+
+
+  <!-- <link rel="stylesheet" href="./FrontEnd/html/assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./FrontEnd/html/assets/css/aos.min.css">
+  <link rel="stylesheet" href="./FrontEnd/html/assets/css/animate.min.css"> -->
 </head>
 
 <body>
@@ -80,15 +85,16 @@
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
         data-bs-slide="next">
-        <span class="carousel-control-next-icon next" aria-hidden="true"></span><span class="visually-hidden ">Next</span>
+        <span class="carousel-control-next-icon next" aria-hidden="true"></span><span
+          class="visually-hidden ">Next</span>
       </button>
     </div>
   </div>
 
-    
 
-    <!-- Welcome & Mission Section -->
-    <section class="container py-5 text-center homepage-highlight">
+
+  <!-- Welcome & Mission Section -->
+  <section class="container py-5 text-center homepage-highlight">
     <h2 class="homepage-section-title">Welcome to Kigumo Technical & Vocational College</h2>
     <p class="homepage-section-subtitle">Empowering students with practical skills for a brighter future.</p>
     <p class="mb-4">Our mission is to provide quality technical education, foster innovation, and prepare graduates for
@@ -110,7 +116,8 @@
           <li><strong>Accreditation:</strong> Registered by TVETA, Ministry of Education</li>
           <li><strong>Vision:</strong> To be a center of excellence in technical and vocational training</li>
           <li><strong>Core Values:</strong> Integrity, Innovation, Inclusivity, Environmental Stewardship</li>
-          <li><strong>Facilities:</strong> Modern workshops, ICT labs, Jitume Labs, outside - hostels, High Speed Internet(WI-FI) and sports grounds</li>
+          <li><strong>Facilities:</strong> Modern workshops, ICT labs, Jitume Labs, outside - hostels, High Speed
+            Internet(WI-FI) and sports grounds</li>
           <li><strong>Community:</strong> Over 2,000+ students and 60+ staff</li>
         </ul>
       </div>
@@ -173,8 +180,90 @@
     <a href="FrontEnd/html/contact.html" class="btn btn-success btn-lg">Contact Us</a>
   </section>
 
+  <div class="parners-text">
+    <div class="container pb-4">
+      <div class="row bounce animated infinite">
+        <div class="col-md-12 text-center">
+          <div class="mb-4 lc-block">
+            <h2 class="" data-aos="flip-right" data-aos-duration="50" data-aos-delay="40">
+              <b><span style="color: rgb(48, 244, 16);">Our Partners</span></b>
+            </h2>
+            <p>We have partnered with several partners whi are</p>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-4">
+        <div class="col-6 col-md-3">
+          <div class="lc-block">
+            <div class="text-center" data-bss-hover-animate="pulse">
+              <div class="partners">
+                <img src="./FrontEnd/images/partners/knqa.jfif" alt="KNQA">
+              </div>
+            </div>
+            <div class="text-center" data-bss-hover-animate="pulse">
+              <div class="partners">
+                <img src="./FrontEnd/images/partners/education.jfif" alt="Ministry of Education">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-3">
+          <div class="lc-block">
+            <div class="text-center" data-bss-hover-animate="pulse">
+              <div class="partners">
+                <img src="./FrontEnd/images/partners/knec.jfif" alt="KNEC">
+              </div>
+            </div>
+            <div class="text-center" data-bss-hover-animate="pulse">
+              <div class="partner">
+                <img src="./FrontEnd/images/partners/tveta.png" alt="TVETA">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-3">
+          <div class="lc-block">
+            <div class="text-center" data-bss-hover-animate="pulse">
+              <div class="partner">
+                <img src="./FrontEnd/images/partners/katti.png" alt="KATTI">
+              </div>
+            </div>
+            <div class="text-center" data-bss-hover-animate="pulse">
+              <div class="partner kasned">
+                <img src="./FrontEnd/images/partners/kasneb.png" alt="KASNEB">
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-3 col-lg-3">
+          <div class="lc-block">
+            <div class="text-center" data-bss-hover-animate="pulse">
+              <div class="partner">
+                <img src="./FrontEnd/images/partners/kuccps.png" alt="KUCCPS">
+              </div>
+
+            </div>
+            <div class="text-center" data-bss-hover-animate="pulse">
+              <div class="partner">
+                <img src="./FrontEnd/images/partners/helb.png" alt="HELB">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
   <!-- Footer Placeholder -->
-  <div id="footer-placeholder"></div>
+  <div id="footer-placeholder">
+    <div class="d-flex flex-column flex-md-row justify-content-between align-items-center small text-white-50">
+      <span>&copy; <span id="year"></span> Kigumo Technical And Vocational College. All rights reserved.</span>
+      <!-- <span>Designed with Bootstrap 5</span> -->
+    </div>
+  </div>
+
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
@@ -184,6 +273,16 @@
   <script src="FrontEnd/js/components.js"></script>
   <!-- Custom JS -->
   <script type="module" src="FrontEnd/js/main.js"></script>
+
+  <!--Our Partners-->
+
+  <script src="./FrontEnd/html/assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="./FrontEnd/html/assets/js/aos.min.js"></script>
+
+  <script src="./FrontEnd/html/assets/js/bs-init.js"></script>
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 
 </html>
