style: enhance partners section with improved layout and styling

--- a/index.html
+++ b/index.html
@@ -180,80 +180,57 @@
     <a href="FrontEnd/html/contact.html" class="btn btn-success btn-lg">Contact Us</a>
   </section>
 
-  <div class="parners-text">
+  <div class="partners-section py-5">
     <div class="container pb-4">
-      <div class="row bounce animated infinite">
-        <div class="col-md-12 text-center">
-          <div class="mb-4 lc-block">
-            <h2 class="" data-aos="flip-right" data-aos-duration="50" data-aos-delay="40">
-              <b><span style="color: rgb(48, 244, 16);">Our Partners</span></b>
-            </h2>
-            <p>We have partnered with several partners whi are</p>
-          </div>
+      <div class="row">
+        <div class="col-12 text-center mb-4">
+          <h2 class="fw-bold" style="color: #30f410;">Our Partners</h2>
+          <p class="text-muted">We have partnered with several organizations who are key to our mission.</p>
         </div>
       </div>
-      <div class="row mt-4">
-        <div class="col-6 col-md-3">
-          <div class="lc-block">
-            <div class="text-center" data-bss-hover-animate="pulse">
-              <div class="partners">
-                <img src="./FrontEnd/images/partners/knqa.jfif" alt="KNQA">
-              </div>
-            </div>
-            <div class="text-center" data-bss-hover-animate="pulse">
-              <div class="partners">
-                <img src="./FrontEnd/images/partners/education.jfif" alt="Ministry of Education">
-              </div>
-            </div>
+      <div class="row justify-content-center align-items-center g-4">
+        <div class="col-6 col-md-3 d-flex justify-content-center">
+          <div class="partner-logo">
+            <img src="./FrontEnd/images/partners/knqa.jfif" alt="KNQA">
           </div>
         </div>
-        <div class="col-6 col-md-3">
-          <div class="lc-block">
-            <div class="text-center" data-bss-hover-animate="pulse">
-              <div class="partners">
-                <img src="./FrontEnd/images/partners/knec.jfif" alt="KNEC">
-              </div>
-            </div>
-            <div class="text-center" data-bss-hover-animate="pulse">
-              <div class="partner">
-                <img src="./FrontEnd/images/partners/tveta.png" alt="TVETA">
-              </div>
-            </div>
+        <div class="col-6 col-md-3 d-flex justify-content-center">
+          <div class="partner-logo">
+            <img src="./FrontEnd/images/partners/education.jfif" alt="Ministry of Education">
           </div>
         </div>
-        <div class="col-6 col-md-3">
-          <div class="lc-block">
-            <div class="text-center" data-bss-hover-animate="pulse">
-              <div class="partner">
-                <img src="./FrontEnd/images/partners/katti.png" alt="KATTI">
-              </div>
-            </div>
-            <div class="text-center" data-bss-hover-animate="pulse">
-              <div class="partner kasned">
-                <img src="./FrontEnd/images/partners/kasneb.png" alt="KASNEB">
-              </div>
-
-            </div>
+        <div class="col-6 col-md-3 d-flex justify-content-center">
+          <div class="partner-logo">
+            <img src="./FrontEnd/images/partners/knec.jfif" alt="KNEC">
           </div>
         </div>
-        <div class="col-6 col-md-3 col-lg-3">
-          <div class="lc-block">
-            <div class="text-center" data-bss-hover-animate="pulse">
-              <div class="partner">
-                <img src="./FrontEnd/images/partners/kuccps.png" alt="KUCCPS">
-              </div>
-
-            </div>
-            <div class="text-center" data-bss-hover-animate="pulse">
-              <div class="partner">
-                <img src="./FrontEnd/images/partners/helb.png" alt="HELB">
-              </div>
-            </div>
+        <div class="col-6 col-md-3 d-flex justify-content-center">
+          <div class="partner-logo">
+            <img src="./FrontEnd/images/partners/tveta.png" alt="TVETA">
+          </div>
+        </div>
+        <div class="col-6 col-md-3 d-flex justify-content-center">
+          <div class="partner-logo">
+            <img src="./FrontEnd/images/partners/katti.png" alt="KATTI">
+          </div>
+        </div>
+        <div class="col-6 col-md-3 d-flex justify-content-center">
+          <div class="partner-logo">
+            <img src="./FrontEnd/images/partners/kasneb.png" alt="KASNEB">
+          </div>
+        </div>
+        <div class="col-6 col-md-3 d-flex justify-content-center">
+          <div class="partner-logo">
+            <img src="./FrontEnd/images/partners/kuccps.png" alt="KUCCPS">
+          </div>
+        </div>
+        <div class="col-6 col-md-3 d-flex justify-content-center">
+          <div class="partner-logo">
+            <img src="./FrontEnd/images/partners/helb.png" alt="HELB">
           </div>
         </div>
       </div>
     </div>
-
   </div>
 
   <!-- Footer Placeholder -->
