--- a/FrontEnd/html/about.html
+++ b/FrontEnd/html/about.html
@@ -17,21 +17,140 @@
     <!-- Navbar Placeholder -->
     <div id="navbar-placeholder"></div>
 
-     <!-- Hero Section with Background Image -->
+    <!-- Hero Section with Background Image -->
     <section class="hero-section position-relative" style="height: 250px; overflow: hidden;">
         <img src="../images/tra1.jpg" alt="Kigumo TVC Campus" class="w-100 h-100"
             style="object-fit: cover; filter: brightness(0.5);">
         <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center"
             style="background: rgba(0, 0, 0, 0.5);">
             <div class="text-center text-white accordion-collapse">
-                <h1 class="display-2 fw-bold text-uppercase mb-0"
-                    style="font-weight: 900 ; letter-spacing: 2px;">  OUR ABOUTS</h1>
+                <h1 class="display-2 fw-bold text-uppercase mb-0" style="font-weight: 900 ; letter-spacing: 2px;"> OUR
+                    ABOUTS</h1>
             </div>
         </div>
     </section>
 
+    <!-- About Content -->
+    <section class="container-xxl my-5">
+        <div class="text-center mb-4">
+            <h2 class="fw-bold about-heading">About Kigumo TVC</h2>
+            <p class="text-muted mb-0">Building skills for employment, entrepreneurship, and community impact.</p>
+        </div>
+        <div class="row g-4 align-items-stretch">
+            <div class="col-lg-7">
+                <div class="about-card about-card-plain h-100">
+                    <h3 class="fw-bold about-subheading" style="text-align: center;">Our History</h3>
+                    <p>Kigumo Technical and Vocational College (KTVC) was established to expand access to quality
+                        technical training for Murang'a County and beyond. From a modest start, the college has grown
+                        into a
+                        vibrant institution offering artisan, certificate, and diploma programmes aligned to industry
+                        needs.
+                    </p>
+                    <p class="mb-0">Over the years, we have invested in modern workshops, ICT labs, and a supportive
+                        learning
+                        environment that promotes innovation, entrepreneurship, and community service.</p>
+                </div>
+            </div>
+            <div class="col-lg-5">
+                <div class="about-card about-card-teal h-100">
+                    <h3 class="fw-bold about-subheading about-subheading-teal" style="text-align: center;">Who We Are
+                    </h3>
+                    <p class="mb-2">KTVC is a public TVET institution committed to producing competent graduates with
+                        practical skills for employment and self‑reliance.</p>
+                    <ul class="mb-0">
+                        <li>Industry‑aligned training</li>
+                        <li>Competency‑based approach</li>
+                        <li>Strong partnerships and linkages</li>
+                        <li>Student‑centred support services</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <section class="container-xxl my-4">
+        <div class="text-center mb-4">
+            <h2 class="fw-bold about-heading" style="text-align: center;">What Makes Us Different</h2>
+        </div>
+        <div class="row g-4">
+            <div class="col-md-6 col-lg-4">
+                <div class="about-card about-card-light h-100">
+                    <h4 class="fw-bold about-subheading">Why Choose KTVC</h4>
+                    <ul class="mb-0">
+                        <li>Accredited programmes</li>
+                        <li>Modern facilities and equipment</li>
+                        <li>Experienced trainers and mentors</li>
+                        <li>Career guidance and placement support</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <div class="about-card about-card-yellow h-100">
+                    <h4 class="fw-bold about-subheading about-subheading-yellow" style="text-align: center;">Programmes
+                        Offered</h4>
+                    <ul class="mb-0">
+                        <li>Engineering and Built Environment</li>
+                        <li>ICT and Business Studies</li>
+                        <li>Agriculture and Applied Sciences</li>
+                        <li>Hospitality, Fashion, and Creative Arts</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <div class="about-card about-card-green h-100">
+                    <h4 class="fw-bold about-subheading" style="text-align: center;">Student Life</h4>
+                    <ul class="mb-0">
+                        <li>Clubs, sports, and leadership opportunities</li>
+                        <li>Supportive academic environment</li>
+                        <li>Mentorship and counselling services</li>
+                        <li>Community outreach projects</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <section class="container-xxl my-5">
+        <div class="text-center mb-4">
+            <h2 class="fw-bold about-heading" style="text-align: center;">Admissions & How to Apply</h2>
+        </div>
+        <div class="row g-4 align-items-stretch">
+            <div class="col-lg-8">
+                <div class="about-card about-card-plain h-100">
+                    <h4 class="fw-bold about-subheading">Application Steps</h4>
+                    <div class="list-group list-group-flush">
+                        <div class="list-group-item">1. Choose your preferred programme.</div>
+                        <div class="list-group-item">2. Collect or download the application form.</div>
+                        <div class="list-group-item">3. Attach required documents (ID/Birth Certificate, academic
+                            certificates, and passport photo).</div>
+                        <div class="list-group-item">4. Submit to the admissions office or via the online portal.</div>
+                        <div class="list-group-item">5. Await admission feedback and reporting instructions.</div>
+                    </div>
+                    <p class="mt-3 mb-0">Need help? Our admissions team is ready to guide you.</p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="about-card about-card-teal h-100">
+                    <h5 class="fw-bold about-subheading about-subheading-teal " style="text-align: center;">Admissions
+                        Office</h5>
+                    <p class="mb-2"><i class="bi bi-geo-alt-fill text-success me-2"></i>P.O. Box 5 - 10203, Kigumo,
+                        Kenya</p>
+                    <p class="mb-2"><i class="bi bi-telephone-fill text-success me-2"></i>+254 769 394 273</p>
+                    <p class="mb-0"><i class="bi bi-envelope-fill text-success me-2"></i>info@kigumotvc.ac.ke</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container my-5 text-center">
+        <div class="p-4 rounded-4 shadow-sm"
+            style="background: linear-gradient(120deg, #28a745 60%, #c3c800 100%); color:#fff;">
+            <h3 class="fw-bold">Ready to Join Kigumo TVC?</h3>
+            <p class="mb-3">Start your application today and take the next step toward a practical, skills‑based future.
+            </p>
+            <a href="contact.html" class="btn btn-light btn-lg">Contact Admissions</a>
+        </div>
+    </section>
 
     <!-- Footer Placeholder -->
     <div id="footer-placeholder"></div>
