--- a/FrontEnd/html/bom.html
+++ b/FrontEnd/html/bom.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Affairs - Kigumo Technical And Vocational College</title>
+    <title>Board of Manangement - Kigumo Technical And Vocational College</title>
     <link rel="shortcut icon" href="../images/fav.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
@@ -12,11 +11,11 @@
 
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-
 <body>
- <!-- Topbar Placeholder -->
+     <!-- Topbar Placeholder -->
   <div id="topbar-placeholder"></div>
-    <!-- Navbar Placeholder -->
+
+   <!-- Navbar Placeholder -->
     <div id="navbar-placeholder"></div>
 
     <!-- Hero Section with Background Image -->
@@ -27,11 +26,10 @@
             style="background: rgba(0, 0, 0, 0.5);">
             <div class="text-center text-white accordion-collapse">
                 <h1 class="display-2 fw-bold text-uppercase mb-0" style="font-weight: 900 ; letter-spacing: 2px;">
-                    KIGUMO TVC STUDENT AFFAIRS</h1>
+                    Board of Manangement </h1>
             </div>
         </div>
     </section>
-
 
     <!-- Footer Placeholder -->
     <div id="footer-placeholder"></div>
@@ -47,7 +45,5 @@
     <!-- Custom JS -->
     <script type="module" src="../js/main.js"></script>
 
-
 </body>
-
 </html>
